# ssrando

./: CHANGELOG.md  SS Rando Logic - Glitchless Requirements.yaml  SpoilerLog.py  checks.yaml  entrances.yaml  eventpatches.yaml  gamepatches.py  items.yaml  options.py  options.yaml  patches.yaml  randomizer-changes.md  randoscript.py  ssrando.py  ssrando.py.in  ssrando.spec  tempmain.py  witmanager.py
.github/workflows/: build.yaml
asm/: custom_symbols.txt  disasm_rs.sh  gen_dol_rel_info.py  ghidra_cleanup.py  ghidra_rels.yaml  linker.ld  memory_repurpose.md  new_actor_list.json  original_symbols.txt  rel_ids.yaml
asm/custom-functions/: Cargo.toml
asm/custom-functions/src/: lib.rs  rvl_mem.rs  rvl_mutex.rs  rvl_os.rs
asm/custom-functions/src/rando/: mod.rs  networking.rs
asm/custom-functions/src/system/: alarm.rs  ios.rs  mod.rs  time.rs
asm/custom-functions/src/utils/: mod.rs
asm/patch_diffs/: custom_funcs_diff.txt  custom_items_diff.txt  fix_bit_crashes_diff.txt  keysanity_diff.txt  ss_necessary_diff.txt
asm/patches/: custom_funcs.asm  ss_necessary.asm
asm/sources/: startFlags.cpp
graph_logic/: __init__.py  constants.py  dataparse.py  graph_logic.py  logic_expression.py  logic_types.py  pools.py
gui/: default_presets.json  guithreads.py  randogui.py  randogui.ui  randogui.ui.autosave  ui_randogui.py
hints/: hint_distribution.py
logic/: constants.py  entrance_rando.py  hints.py  logic.py  logic_input.py  randomize.py
native-patcher/: Cargo.toml
secret/: make_secret_key.py
sslib/: allpatch.py  msb.py
util/: file_accessor.py
(+27 files in other folders)
